package com.vale.warehouses.service.model;

public enum Category {
    First,
    Second,
    Third,
    Forth,
    Fifth
}
