package com.vale.warehouses.service.model;

public enum WarehouseType {
    ClimateControlled,
    Granary,
    Refrigerated,
    Clothing,
    Automated
}
