@startuml

title __MODEL's Class Diagram__\n

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        enum Category {
          Fifth
          First
          Forth
          Second
          Third
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.LeaseRequest {
            - id : Long
            + getId()
            + getLeasingContract()
            + getTenant()
            + getWarehouseType()
            + setId()
            + setLeasingContract()
            + setTenant()
            + setWarehouseType()
            + toString()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.LeasingContract {
            - id : Long
            - leasedAt : OffsetDateTime
            - leasedTill : OffsetDateTime
            + getId()
            + getLeaseRequest()
            + getLeasedAt()
            + getLeasedTill()
            + getOwner()
            + getSaleAgent()
            + getTenant()
            + getWarehouse()
            + setId()
            + setLeaseRequest()
            + setLeasedAt()
            + setLeasedTill()
            + setOwner()
            + setSaleAgent()
            + setTenant()
            + setWarehouse()
            + toString()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.Owner {
            - address : String
            - firstName : String
            - id : Long
            - lastName : String
            - phoneNumber : String
            - uniqueCode : String
            + getAddress()
            + getFirstName()
            + getFullName()
            + getId()
            + getLastName()
            + getPhoneNumber()
            + getUniqueCode()
            + getUser()
            + setAddress()
            + setFirstName()
            + setId()
            + setLastName()
            + setPhoneNumber()
            + setUniqueCode()
            + setUser()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.Role {
            - id : long
            - name : String
            + getId()
            + getName()
            + setId()
            + setName()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        enum RoleType {
          Admin
          Owner
          SaleAgent
          Tenant
          value
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.SaleAgent {
            - address : String
            - fee : double
            - firstName : String
            - id : Long
            - lastName : String
            - phoneNumber : String
            - rating : int
            - uniqueCode : String
            + getAddress()
            + getFee()
            + getFirstName()
            + getFullName()
            + getId()
            + getLastName()
            + getPhoneNumber()
            + getRating()
            + getUniqueCode()
            + getUser()
            + setAddress()
            + setFee()
            + setFirstName()
            + setId()
            + setLastName()
            + setPhoneNumber()
            + setRating()
            + setUniqueCode()
            + setUser()
            + toString()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.Tenant {
            - address : String
            - firstName : String
            - id : Long
            - lastName : String
            - phoneNumber : String
            - uniqueCode : String
            + getAddress()
            + getFirstName()
            + getFullName()
            + getId()
            + getLastName()
            + getPhoneNumber()
            + getUniqueCode()
            + getUser()
            + setAddress()
            + setFirstName()
            + setId()
            + setLastName()
            + setPhoneNumber()
            + setUniqueCode()
            + setUser()
            + toString()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.Token {
            - expireAt : OffsetDateTime
            - id : String
            + getExpireAt()
            + getId()
            + getUser()
            + setExpireAt()
            + setId()
            + setUser()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.User {
            - confirmPassword : String
            - email : String
            - id : long
            - password : String
            - roles : Set<Role>
            - userName : String
            + addRole()
            + getConfirmPassword()
            + getEmail()
            + getId()
            + getPassword()
            + getRelatedOwner()
            + getRelatedSaleAgent()
            + getRelatedTenant()
            + getRoles()
            + getUserName()
            + hasRole()
            + removeRole()
            + setConfirmPassword()
            + setEmail()
            + setId()
            + setPassword()
            + setRelatedOwner()
            + setRelatedSaleAgent()
            + setRelatedTenant()
            + setRoles()
            + setUserName()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        class com.vale.warehouses.service.model.Warehouse {
            - address : String
            - height : double
            - id : long
            - leasingContracts : Set<LeasingContract>
            - length : double
            - pricePerMonth : BigDecimal
            - saleAgents : Set<SaleAgent>
            - width : double
            + getAddress()
            + getArea()
            + getCategory()
            + getHeight()
            + getId()
            + getLength()
            + getOwner()
            + getPricePerMonth()
            + getSaleAgents()
            + getType()
            + getVolume()
            + getWidth()
            + setAddress()
            + setCategory()
            + setHeight()
            + setId()
            + setLength()
            + setOwner()
            + setPricePerMonth()
            + setSaleAgents()
            + setType()
            + setWidth()
            + toString()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace service {
      namespace model {
        enum WarehouseType {
          Automated
          ClimateControlled
          Clothing
          Granary
          Refrigerated
        }
      }
    }
  }
  

  com.vale.warehouses.service.model.LeaseRequest o-- com.vale.warehouses.service.model.LeasingContract : leasingContract
  com.vale.warehouses.service.model.LeaseRequest o-- com.vale.warehouses.service.model.Tenant : tenant
  com.vale.warehouses.service.model.LeaseRequest o-- com.vale.warehouses.service.model.WarehouseType : warehouseType
  com.vale.warehouses.service.model.LeasingContract o-- com.vale.warehouses.service.model.LeaseRequest : leaseRequest
  com.vale.warehouses.service.model.LeasingContract o-- com.vale.warehouses.service.model.Owner : owner
  com.vale.warehouses.service.model.LeasingContract o-- com.vale.warehouses.service.model.SaleAgent : saleAgent
  com.vale.warehouses.service.model.LeasingContract o-- com.vale.warehouses.service.model.Tenant : tenant
  com.vale.warehouses.service.model.LeasingContract o-- com.vale.warehouses.service.model.Warehouse : warehouse
  com.vale.warehouses.service.model.Owner .up.|> java.io.Serializable
  com.vale.warehouses.service.model.Owner o-- com.vale.warehouses.service.model.User : user
  com.vale.warehouses.service.model.Role .up.|> java.io.Serializable
  com.vale.warehouses.service.model.Role -up-|> org.json.JSONObject
  com.vale.warehouses.service.model.SaleAgent .up.|> java.io.Serializable
  com.vale.warehouses.service.model.SaleAgent o-- com.vale.warehouses.service.model.User : user
  com.vale.warehouses.service.model.Tenant .up.|> java.io.Serializable
  com.vale.warehouses.service.model.Tenant o-- com.vale.warehouses.service.model.User : user
  com.vale.warehouses.service.model.Token .up.|> java.io.Serializable
  com.vale.warehouses.service.model.Token o-- com.vale.warehouses.service.model.User : user
  com.vale.warehouses.service.model.User .up.|> java.io.Serializable
  com.vale.warehouses.service.model.User -up-|> org.json.JSONObject
  com.vale.warehouses.service.model.User o-- com.vale.warehouses.service.model.Owner : relatedOwner
  com.vale.warehouses.service.model.User o-- com.vale.warehouses.service.model.SaleAgent : relatedSaleAgent
  com.vale.warehouses.service.model.User o-- com.vale.warehouses.service.model.Tenant : relatedTenant
  com.vale.warehouses.service.model.Warehouse .up.|> java.io.Serializable
  com.vale.warehouses.service.model.Warehouse o-- com.vale.warehouses.service.model.Category : category
  com.vale.warehouses.service.model.Warehouse o-- com.vale.warehouses.service.model.Owner : owner
  com.vale.warehouses.service.model.Warehouse o-- com.vale.warehouses.service.model.WarehouseType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
